# mentari-assistant

./: .env.example  README.md  pyproject.toml  report.md
src/mentari_assistant/: crew.py  main.py
src/mentari_assistant/config/: agents.yaml  tasks.yaml
src/mentari_assistant/tools/: mentari_tools.py
src/personal_assistant/: crew.py
