[project]
name = "personal_assistant"
version = "0.1.0"
description = "personal-assistant using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.201.1,<1.0.0"
]

[project.scripts]
personal_assistant = "personal_assistant.main:run"
run_crew = "personal_assistant.main:run"
train = "personal_assistant.main:train"
replay = "personal_assistant.main:replay"
test = "personal_assistant.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
